hphp/test/zend/good/ext/sockets/tests/socket_bind.php.skipif
<?php
    if (!extension_loaded('sockets')) {
        die('skip - sockets extension not available.');
    }
    if (getenv("SKIP_ONLINE_TESTS")) {
        die("skip test requiring internet connection");
    }
?>